v.js/v.css
/* Copyright (c) 2012 Md Gao
 * MIT /LICENSE
 * Improve my V2EX experience
 */

* { -webkit-text-size-adjust: auto !important; }

/* font fix for Windows Vista+ */
body { font-family: "Segoe UI", "Microsoft YaHei" !important }

/* avoid comments area overflow with very long url. use 624 if avatar hidden */
/*.reply_content { width: 576px; }*/
.reply_content { width: 624px; }
.cell .gist { max-width: 624px; }

/* remove share shit */
a.op[href="#;"] { display: none; }

/* Let's focus on discussion, PLEASE! */
/* hide commentator's avatar */
#Content .box #replies .reply table td:nth-child(1) { display: none; }
#Content .box .cell .avatar, #Content .box .cell table a img { display: none; }
/* improve visibility of commentator's name*/
#Content .box #replies .reply table td:nth-child(3) > strong { font-size: 130%; }
/* hide OP's avatar */
#Content > .box:nth-child(1) > .cell > .fr.snow { display: none; }
#Content > .box:nth-child(1) > .cell > .fr.snow { display: none; }
/* improve visibility of OP's name*/
/* deprecated since OP structure change
#Content > .box:nth-child(1) > .cell > small.fade { font-size: 100%; }
#Content > .box:nth-child(1) > .cell > small.fade a { font-size: 130%; font-weight: bold; }
*/
#Content > .box:nth-child(1) > .inner > .content.topic_content > small.fade {
	display: block;
	font-size: 70%;
	font-weight: bolder;
}
#Content > .box:nth-child(1) > .inner > .content.topic_content > small.fade a {
	/* dirty dirty hacks... */
	font-size: 155%;
}

/* improve visibility of posts on index */
#Content > .box .cell > table > tbody > tr span.bigger { font-size: 160% !important; }
#Content > .box .cell > table > tbody > tr span.bigger a { color: black; }
#Content > .box .cell > table > tbody > tr span.bigger a:visited { color: #eeeeec; }
#Content > .box .cell > table > tbody > tr span.bigger a:hover { color: black; }

.box {
	-webkit-border-radius: 0;
	-webkit-box-shadow: none;
	background-color: transparent !important;
	border: 0;
}

.inner {
    border-radius: .3em;
}

.box .cell {
    background-color: white;
    border-radius: .3em;
    margin-bottom: .5em;
    border-bottom: none;
}

.box .inner {
    background-color: white;
}

#Top {
    background-color: transparent;
    background-image: none;
}

#BottomMain {
	display: none;
}

#TopMain, #Main {
	width: 640px;
}

/*#TopMain #Search > form > input {*/
#q {
	width: 160px !important;
	border: 1px solid #eeeeec;
	border-radius: 2em;
	margin: 1px;
	padding: 0 1em;
	background-color: white;
}

#reply_content {
	width: 99%;
}

.tag-in-title {
	/*border-radius: .2em;*/
	line-height: 1em !important; /* imp must have currently */
	font-size: 1em !important; /* imp must have currently */
	font-family: Arial, "Microsoft YaHei", sans-serif !important;
}

#Top, #TopMain {
	height: auto;
}

#TopMain table {
	text-align: center;
	width: 100%;
}

/*#logo-here {*/
#Top {
	background: -webkit-linear-gradient(top, rgba(85,87,83,0.42) 0%,rgba(0,0,0,0) 90%);
	background: -moz-linear-gradient(top, rgba(85,87,83,0.42) 0%,rgba(0,0,0,0) 90%);
}

#new-logo {
	font-size: 12em;
	font-family: "Arial Black", Arial, sans-serif;
	font-weight: 900;
	padding: 0;

	/* cause text real area overflow div */
	/*line-height: 1em;*/
	text-decoration: none;
	-webkit-transition: color 1s;
	-moz-transition: color 1s;

	/* for span */
	cursor: pointer;
	color: #ddd;
}

#new-logo:hover {
	color: #555753;
}

#new-logo:active {
	color: #2e3436;
}

#meta-here {
	padding: .5em 0;
}

#q {
	width: 100%;
	border: 1px solid #eeeeec;
	border-radius: 2em;
	margin: 1px;
	padding: 0 1em;
	background-color: white;
	height: 2.4em;
	outline: none;
}

#Rightbar {
	display: none;
}

/* align page numbers */
.page_current,
.page_normal {
	width: 2em;
	text-align: center
}
#topic_index > .inner {
	text-align: left;
}
/* aligned */

